Global refactoring